--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,15 @@ yarn-error.log*
 .vercel
 
 # typescript
-*.tsbuildinfo
 next-env.d.ts
+*.tsbuildinfo
+
+# OS keys
+.DS_Store
+Thumbs.db
+
+# Editors
+.vscode
+.idea
+*.swp
+
